--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.2
   nfc_manager: ^3.5.0
   flutter_svg: ^2.0.14
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
