--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  crypto: ^3.0.6
-  convert: ^3.1.2
   http: ^1.2.2
   nfc_manager: ^3.5.0
   flutter_svg: ^2.0.14
   shared_preferences: ^2.3.3
+  pointycastle: ^3.9.1
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
