--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "ecink",
         "miterlimit",
+        "nfca",
         "pointycastle",
         "vsync",
         "xlink"
