--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.3.3
   pointycastle: ^3.9.1
   encrypt: ^5.0.3
+  convert: ^3.1.2
 
 dev_dependencies:
   flutter_test:
